# Synthetic-Atrophy-For-Longitidunal-Cortical-Surface-Analyses

./: README.md  Synthetic-Atrophy-resolutionTesting-v6.sh  Synthetic-Atrophy_example.sh  Synthetic-Atrophy_example.sh~
Combine-Fields/: CMakeLists.txt  combineFields.cxx
Copy-Scalars/: CMakeLists.txt  copyScalars.cxx
Data/Input/: aparc.DKTatlas+aseg_wmFill_rh.txt
Distance-Between-Surfaces/: CMakeLists.txt  CMakeLists.txt~  distanceBetweenSurfaces.cxx  distanceBetweenSurfaces.cxx~
Example-Data/Input/: aparc.DKTatlas+aseg_wmFill_lh.txt  labels_DKTatlas.txt
FillHoles/: CMakeLists.txt  FillHoles.cxx
Get-Blur-Mask/: CMakeLists.txt  getBlurMask.cxx
Get-Trim-Region/: CMakeLists.txt  getTrimRegion.cxx
Mask-Field/: CMakeLists.txt  gradientMask_surfacebased.cxx
Pad-Image/: CMakeLists.txt  padImage.cxx
Pad-Vector-Image/: CMakeLists.txt  padVectorImage.cxx
Parcellate-Atrophy-Region/: CMakeLists.txt  parcellateAtrophyRegion.cxx
Parcellate-Single-Surface/: CMakeLists.txt  CMakeLists.txt~  parcellateSingleSurface.cxx  parcellateSingleSurface.cxx~
Perform-Erosion/: CMakeLists.txt  performErosion.cxx
Read-Mesh-Array/: CMakeLists.txt  CMakeLists.txt~  readMeshArray.cxx  readMeshArray.cxx~
Trim-Float-Image/: CMakeLists.txt  trimFloatImage.cxx
Trim-Image/: CMakeLists.txt  trimImage.cxx
VTK2VTP/: CMakeLists.txt  CMakeLists.txt~  vtk2vtp.cxx
VTP2VTK/: CMakeLists.txt  CMakeLists.txt~  vtp2vtk.cxx
Warp-Surfaces/: CMakeLists.txt  warpSurfaces.cxx
